--- a/evt-viewer/app/index.html
+++ b/evt-viewer/app/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	</meta>
-	<title>EVT Viewer</title>
+	<title>Epistolario Canneti Fiacchi</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
 
