--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div>
                 <h1>EVT2</h1>
                 <div class="container">
-                    <a id="center" class="btn btn-secondary btn-md" href="evt-viewer/index.html" target="_blank">EVT</a>
+                    <a id="center" class="btn btn-secondary btn-md" href="evt-viewer/app/index.html" target="_blank">EVT</a>
                 </div>
             </div>
         </div>
