solved content info biliographic entities

--- a/evt-viewer/app/src/namedEntity/namedEntity.directive.tmpl.html
+++ b/evt-viewer/app/src/namedEntity/namedEntity.directive.tmpl.html
@@ -79,6 +79,9 @@
                                         <i ng-switch-when="geogFeat"
                                             class="fa fa-map-marker namedEntity__detail-icon"></i>
 
+                                        <i ng-switch-when="title"
+                                            class="fa fa-circle namedEntity__detail-icon"></i>
+
                                         <i ng-switch-when="district"
                                             class="fa fa-map-marker namedEntity__detail-icon"></i>
                                         <i ng-switch-when="settlement"
