--- a/evt-viewer/app/src/select/select.directive.tmpl.html
+++ b/evt-viewer/app/src/select/select.directive.tmpl.html
@@ -5,7 +5,7 @@
       class="label_selected" 
       title="{{ vm.getOptionSelected().title | translate }}"
       data-value="{{ vm.getOptionSelected().value }}">
-      {{ vm.getOptionSelected().label | translate | camelToSpaces | underscoresToSpaces | capitalize  }}
+      {{ vm.getOptionSelected().label | translate  }}
    </span>
    <div 
       class="open_options" 
@@ -18,12 +18,12 @@
                   'openUp': vm.openUp }" >
       <div ng-repeat="option in vm.optionList" ng-switch="::option.type">
          <div ng-switch-when="groupTitle" class="option groupTitle">
-            {{ option.label | translate | camelToSpaces | underscoresToSpaces | capitalize }}
+            {{ option.label | translate }}
          </div>
          <div 
             ng-switch-default
             class="option {{ ::option.additionalClass }}" 
-            title="{{option.title | translate | camelToSpaces | underscoresToSpaces | capitalize  }}" 
+            title="{{option.title | translate }}" 
             data-value="{{::option.value }}"
             data-wit="{{::option.ed}}"
             ng-click="vm.doCallback(vm.optionSelected, option);"
@@ -31,7 +31,7 @@
             <i class="fa {{::option.icon}} option-icon-label" 
                style="color: {{ ::option.color }}"
                ng-if="::option.icon"></i>
-            {{ option.label  | translate | camelToSpaces | underscoresToSpaces | capitalize }}
+            {{ option.label  | translate }}
          </div>
       </div>
    </div>
