search function updated and working

--- a/evt-viewer/app/index.html
+++ b/evt-viewer/app/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	</meta>
 	<title>Carteggio Canneti Fiacchi</title>
-	<meta name="description" content="">
+	<meta name="description" content="Edizione digitale del carteggio fra i monaci camaldolesi del 700 Pietro Canneti e Mariangelo Fiacchi, tra i fondatori della Biblioteca Classense di Ravenna.">
 	<meta name="viewport" content="width=device-width">
 
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome.min.css">
