--- a/evt-viewer/app/src/search/searchBox.directive.tmpl.html
+++ b/evt-viewer/app/src/search/searchBox.directive.tmpl.html
@@ -28,7 +28,10 @@
          </div>
       </div>
 
-      <input type="text" id="{{::vm.keyboardId}}" ng-model="vm.searchInput" ng-change="vm.highlightSearchResults(vm.parentBoxId, vm.searchInput)" autocomplete="off" autofocus>
+      <input type="text" id="{{::vm.keyboardId}}" ng-model="vm.searchInput" ng-change="vm.highlightSearchResults(vm.parentBoxId, vm.searchInput)" autocomplete="off" autofocus style="display: inline-block; width: auto; margin-left: 8px;">
+      <span class="search-result-count" ng-if="searchResults.totalHighlights > 0" style="margin-left: 8px;">
+        {{searchResults.currentHighlightIndex + 1}} / {{searchResults.totalHighlights}} result<span ng-if="searchResults.totalHighlights !== 1">s</span>
+      </span>
    </form>
    <evt-virtual-keyboard></evt-virtual-keyboard>
    <evt-search-results ng-controller="SearchResultsCtrl as searchResults"></evt-search-results>
