--- a/evt-viewer/app/src/toc/toc.dir.tmpl.html
+++ b/evt-viewer/app/src/toc/toc.dir.tmpl.html
@@ -9,7 +9,7 @@
                 <ul ng-repeat="key in vm.keys">
                     <span class="list_head_sub"
                             ng-if="doc.divs[key].length > 0">{{ 'TOC.' + key.toUpperCase() | translate }}</span>
-                  <li ng-repeat="div in doc.divs[key]"
+                  <li ng-repeat="div in doc.divs[key] track by $index"
                       ng-click="vm.goToDiv(doc.value, div)">
                       <span class="indexLink">{{vm.divs[div].title}}</span>
                       <ul ng-if="vm.subDivs[div].length > 0">
@@ -24,7 +24,7 @@
             <div ng-if="doc.pages.length > 0">
                 <span class="list_head">{{ 'TOC.PAGES' | translate }}</span>
                 <ul>
-                    <li ng-repeat="page in doc.pages"
+                    <li ng-repeat="page in doc.pages track by $index"
                         ng-click="vm.goToPage(doc.value, page)">
                         <span class="indexLink">{{page}}</span>
                     </li>
